boter, kaas & eieren start

--- a/index.html
+++ b/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/mystyle.css">
 </head>
 <body>
-    <h1>monke</h1>
-    <p>monke 2</p>
+
+    <div id="main">
+        <article class="row-1">
+            <p id="text"></p>
+        </article>
+        <article class="row-1">
+            <p id="text"></p>
+        </article>
+        <article class="row-1">
+            <p id="text"></p>
+        </article>
+        <article class="row-2">
+            <p id="text"></p>
+        </article>
+        <article class="row-2">
+            <p id="text"></p>
+        </article>
+        <article class="row-2">
+            <p id="text"></p>
+        </article>
+        <article class="row-3">
+            <p id="text"></p>
+        </article>
+        <article class="row-3">
+            <p id="text"></p>
+        </article>
+        <article onclick="leftUnder()" class="row-3">
+            <p id="text"></p>
+        </article>
+    </div>
+
+
+    <script src="/js/main.js"></script>
 </body>
 </html>
