--- a/index.html
+++ b/index.html
@@ -10,33 +10,34 @@
 <body>
 
     <div id="main">
-        <article class="row-1">
-            <p id="text"></p>
+        <article onclick="blockOneClick()" class="row-1">
+            <p class="text" id="text1"></p>
         </article>
         <article class="row-1">
-            <p id="text"></p>
+            <p class="text" id="text2"></p>
         </article>
         <article class="row-1">
-            <p id="text"></p>
+            <p class="text" id="text3"></p>
         </article>
         <article class="row-2">
-            <p id="text"></p>
+            <p class="text" id="text4"></p>
         </article>
         <article class="row-2">
-            <p id="text"></p>
+            <p class="text" id="text5"></p>
         </article>
         <article class="row-2">
-            <p id="text"></p>
+            <p class="text" id="text6"></p>
         </article>
         <article class="row-3">
-            <p id="text"></p>
+            <p class="text" id="text7"></p>
         </article>
         <article class="row-3">
-            <p id="text"></p>
+            <p class="text" id="text8"></p>
         </article>
-        <article onclick="leftUnder()" class="row-3">
-            <p id="text"></p>
-        </article>
+        
+        <button onclick="blockNineClick()" class="row-3">
+            <p class="text" id="text9"></p>
+        </button>
     </div>
 
 
